Fix# form: toggle password visibility for oc and nc

--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,3 @@ input[type="submit"] {
 .groupofone {
 	position: relative;
 }
-
-#show-password {
-	margin-left: 0px!important;
-	padding-left: 0px!important;
-}
-
-#submit {
-	margin-top: 24px!important;
-}
